# vip-rec

./: .gitignore  README.md  pyproject.toml
app/: action_agent.py  action_debugger.py  camera_agent.py  tts_agent.py  tts_debugger.py  ui_gradio.py
component/: remove_bg.py
config/: __init__.py
credential/: server_vap_backend.crt  server_vap_backend.key
data/: article_1.md  article_2.md  articles.json  converter.py
demo/: demo_face.py  face_detector.py  image_client.py  image_server.py  talk.py  zed_image_client.py  zed_image_client_face_rec.py
util/: cv_helper.py  edgetts_helper.py  face_helper.py  g1_action.py  g1_audio.py  g1_helper.py  ip_helper.py  redis_helper.py  rtsp_helper.py  socker_helper.py  socket_helper_no_auth.py  socket_server.py
util/action/: conversational_gesture.py  run_conversation_gesture.py  run_neutral_gesture.py  run_open_gesture.py
