[project]
name = "VIP"
version = "0.1.0"
description = "VIP Recognition service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "aiortc>=1.14.0",
    "deepface>=0.0.96",
    "edge-tts>=7.2.7",
    "opencv-python>=4.12.0.88",
    "pyopengl>=3.1.10",
    "pyprojroot>=0.3.0",
    "python-dotenv>=1.2.1",
    "tf-keras>=2.20.1",
    "ultralytics>=8.3.240",
    "websockets>=15.0.1",
    "zmq>=0.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "util", "config", "component"]
exclude = ["static", "templates"]
